fixed the footer
made the footer not overlap with content

--- a/css/global.css
+++ b/css/global.css
@@ -24,3 +24,7 @@
   padding: 0;
   
 }
+
+.contents{
+  margin-bottom: 60px;
+}
